--- a/styles.css
+++ b/styles.css
@@ -845,6 +845,7 @@ ul {
     right: -400px;
     /* Hidden by default */
     width: 350px;
+    max-width: 100%;
     height: 100%;
     background: white;
     box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
@@ -852,6 +853,13 @@ ul {
     transition: right 0.3s ease;
     display: flex;
     flex-direction: column;
+}
+
+@media (max-width: 480px) {
+    .cart-modal {
+        width: 100%;
+        right: -100%;
+    }
 }
 
 .cart-modal.active {
